# agenteconomy

./: .gitignore  CLAUDE.md  DISCORD_POST.md  QUICK_START.md  README.md
agents/the-amplifier/: .env.example  README.md  pyproject.toml  requirements.txt
agents/the-architect/: .env.example  README.md  pyproject.toml  requirements.txt
agents/the-architect/src/: agents.py  server.py  setup.py  zeroclick.py
agents/the-doppelganger/: .env.example  README.md  pyproject.toml
agents/the-doppelganger/src/: cloner.py  server.py  setup.py
agents/the-fund/: .env.example  README.md  pyproject.toml  qa_llms_txt.py
agents/the-fund/src/: buyer.py  portfolio.py
agents/the-gold-star/: .env.example  README.md  pyproject.toml  requirements.txt  review-results.json  run_local.py  run_reviews.py
agents/the-gold-star/dashboard/: index.html
agents/the-gold-star/snapshot-data/2026-03-06-212559/: _index.md  _raw.json  agent-broker.md  agentaudit.md  agentcard-enhancement-agent.md  agentin.md  ai-landing-page-builder.md  ai-research-broker-agent.md  aws-strands-deep-analyzer.md  busybeeais-deep-research-agent.md  busybeeais-talent-scout-agent.md  celebrity-economy.md  cloudagi-gpu-compute.md  cloudagi-smart-search.md  cortex.md  crypto-market-intelligence.md  data-analytics-seller-agent.md  dataforge-search.md  dataforge-web.md  demo-agent.md  exa-research-scout.md  grant-research-writing-agent.md  intel-marketplace.md  key-auction-house.md  meta-agents.md  mog-markets.md  nevermailed-com.md  portfolio-manager-agent-rating-consulting.md  pricebot.md  qa-checker-agent.md  social-media-manager.md  solo-venture.md  sparkclean.md  test4test-testing-as-a-service.md  ventureos.md  web-scraper-agent.md
agents/the-gold-star/src/: qa.py  server.py  setup.py
agents/the-judge/: README.md  pyproject.toml
agents/the-judge/src/: arbiter.py  server.py  setup.py
agents/the-ledger/: .env.example  README.md  pyproject.toml  requirements.txt
agents/the-ledger/blog/: 01-the-next-eight-billion.md  02-the-protocol-stack.md  03-trust-at-machine-speed.md  04-hayek-coase-and-homo-agenticus.md  05-what-happens-next.md
agents/the-ledger/dashboard/: index.html
agents/the-ledger/sponsors/: ability.md  apify.md  aws.md  coinbase.md  exa.md  langchain.md  mindra.md  nevermined.md  privy.md  vgs.md  visa.md  zeroclick.md
agents/the-ledger/src/: blog.py  data.py  fund_page.py  server.py  sponsors.py
agents/the-ledger/static/diagrams/: nevermined-middleware.excalidraw  protocol-stack.excalidraw  x402-flow.excalidraw
agents/the-mystery-shopper/: .env.example  README.md  pyproject.toml
agents/the-oracle/: .env.example  README.md  pyproject.toml  requirements.txt
agents/the-oracle/src/: discovery.py  health_checker.py  server.py  setup.py  zeroclick.py
agents/the-transcriber/: .env.example  README.md  pyproject.toml
agents/the-underwriter/: .env.example  README.md  pyproject.toml
agents/the-underwriter/src/: reputation.py  server.py  setup.py
docs/: AGENT-ECONOMY-RESEARCH.md  AMPLIFIER-DEEP-DIVE.md  DEPLOY-RAILWAY.md  MARKETPLACE-LANDSCAPE.md  OPERATIONS.md  OUR-PORTFOLIO.md  STRATEGY.md  TOP-TARGETS.md  VISION-v2.md  VISION-v3.md  VISION.md
docs/data/: marketplace-all.json  marketplace-buyers.json  marketplace-sellers.json
reports/: snapshot.py
reports/2026-03-06-212559/: agent-evaluator.md  agent-staffing-agency.md  agentbank.md  ai-payments-researcher.md  airi-ai-resilience-index.md  apify-web-scraper.md  autonomous-lead-seller.md  busybeeais-market-intelligence-agent.md  buyer-seller-debugger.md  cloudagi-ai-research.md  cloudagi-code-review.md  cloudagi-web-scraper.md  langgraph-insight-analyst.md  market-buyer.md  market-insight-creative-pipeline-hub.md  market-intel-agent.md  nexus-intelligence-hub.md  platon-memory.md  prampter-agent.md  predictiveedge.md  procurepilot.md  quickturn.md  sabi.md  still-thinking.md  store-agents-vision-check.md  talltyfor-tax-finance-expert.md  the-churninator.md  (+3 more)
research/: blog-series-plan.md  glossary.md  the-agent-economy.md
(+27 files in other folders)
