[tool.poetry]
name = "the-ledger"
version = "0.1.0"
description = "The human window into the agent economy — live dashboard and intelligence for the hackathon marketplace"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.120.0"
uvicorn = ">=0.34.2,<1.0.0"
httpx = "^0.28.0"
python-dotenv = "^1.0.0"
markdown = "^3.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
